--- a/webmobile-base/package.json
+++ b/webmobile-base/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "firebase": "^5.9.3",
     "register-service-worker": "^1.6.2",
+    "vee-validate": "^2.2.11",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1",
     "vue-simplemde": "^0.5.2",
